syntax = "proto3";

package interceptor;

option go_package = "github.com/bluekaki/pkg/vv/pkg/plugin/interceptor/options";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions {
  optional MethodHandler method_handler = 74500;
}

extend google.protobuf.ServiceOptions {
  optional ServiceHandler service_handler = 74501;
}

message MethodHandler {
  optional string authorization = 1;       // sso
  optional string authorization_proxy = 2; // signature
  optional string whitelisting = 3;        // ip
  optional bool journal = 4;               // log the req/resp payload
  optional bool ignore = 5;                // do not log anything
  optional string metrics_alias = 6;       // alias for restful path
}

message ServiceHandler {
  optional string authorization = 1;       // sso
  optional string authorization_proxy = 2; // signature
  optional string whitelisting = 3;        // ip
}